# jupyter_server_mathjax

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  copyAssets.js  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
jupyter_server_mathjax/: __init__.py  __version__.py  app.py  traits.py
jupyter_server_mathjax/tests/: test_api.py
tests/: conftest.py  test_api.py
