[metadata]
name = jupyter_server_mathjax
description = MathJax resources as a Jupyter Server Extension.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = http://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter, jupyter-server
license = BSD 3-Clause License
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    jupyter_server >= 1.1

[options.extras_require]
test = jupyter_server[test]; pytest

[options.package_data]
jupyter_server_mathjax = static/**/*

[options.data_files]
etc/jupyter/jupyter_server_config.d = jupyter_server_config.d/*.json

[manifix]
known-excludes =
    .git*
    .git/**/*
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    .pytest_cache/**/*
    package-lock.json
    *.egg-info/**/*
    .vscode/**/*
